--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-naver-maps": "^0.1.3",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
